--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -14,7 +14,7 @@
   /* border-bottom: solid 1px red !important; */
   background-color: rgba(196, 196, 196, 0.01);
   /* color: purple; */
-  border: solid red;
+  /* border: solid red; */
   border-top: none;
   border-left: none;
   border-right: none;
@@ -36,6 +36,7 @@
 
 .menu__options.show_options {
   display: none;
+  /* display: block/; */
 }
 
 .logo {
@@ -340,6 +341,7 @@
     margin-top: 16px;
     margin-bottom: 22px;
     /* border: solid red; */
+    z-index: 4444;
   }
 
   .navigation__home-mobile-saved {
@@ -483,7 +485,7 @@
     /* height: 230px; */
   }
 
-  .navig__moobile_open-header.open {
+  .navig__mobile_open-header.open {
     display: block;
     /* border: solid rgba(196, 196, 196, 0.01); */
     border: solid rgb(201, 202, 207);
@@ -502,6 +504,7 @@
     /* width: 100%; */
     max-width: 614px;
     width: 100%;
+    z-index: 100;
   }
 
   .menu__options-bar {
@@ -512,6 +515,7 @@
     /* max-width: 320px; */
     /* width: 50%; */
     /* gap: 22px; */
+    /* border: solid red; */
     gap: 2px;
   }
 
@@ -577,6 +581,11 @@
     /* border: solid red; */
     z-index: 4;
   }
+
+  /* .menu__options-bar .mobile__open {
+    border: solid red !important;
+    z-index: 222;
+  } */
 }
 
 @media screen and (max-width: 430px) {
@@ -769,6 +778,7 @@
     /* width: 100%; */
     max-width: 430px;
     width: 100%;
+    /* z-index: 222; */
   }
 
   .menu__options-bar {
